@@ -1,3 +1,7 @@
+2007-03-19  Darin Adler  <darin@apple.com>
+
+        * kjs/value.h: Roll ~JSValue change out. It was causing problems. I'll do it right later.
+
 2007-03-19  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by John Sullivan.
